# pyproject-external

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pypi.yml  test.yml
src/external_metadata_mappings/: __init__.py  parse.py
src/pyproject_external/: __init__.py  __main__.py  _cli.py  _config.py  _constants.py  _external.py  _registry.py  _sdist.py  _system.py  _url.py  install.py
src/pyproject_external/_cli/: _utils.py  app.py  build.py  cross_build.py  install.py  prepare.py  query.py  show.py
tests/: test_commands.py  test_config.py  test_external.py  test_main.py  test_parse.py  test_registry.py  test_system.py  test_url.py
