[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyproject-external"
version = "0.0.1"
description = "Utilities to work with PEP 725 `[external]` metadata"
readme = "README.md"
authors = [
  { name = "Ralf Gommers", email = "rgommers@quansight.com" },
  { name = "Jaime Rodríguez-Guerra", email = "jrodriguez@quansight.com" },
]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
dependencies = [
  "requests",
  "jsonschema",
  "distro",
  "rich",
  "tomli; python_version <= '3.10'",
  "tomli-w",
  "typer",
  "typing_extensions; python_version <= '3.10'",
  "packaging",
  "packageurl-python @ git+https://github.com/jaimergp/packageurl-python.git@pkg-class-attr",
]

[project.urls]
homepage = "https://github.com/jaimergp/pyproject-external"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
pyproject-external = { path = ".", editable = true }

[tool.pixi.feature.pre-commit.dependencies]
pre-commit = "*"
[tool.pixi.feature.pre-commit.tasks]
pre-commit = "pre-commit"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
test-py310 = ["test", "py310"]
test-py311 = ["test", "py311"]
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]
pre-commit = ["pre-commit"]

[tool.ruff]
line-length = 99

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
strict = true
